The layout for the requirements list is mostly finished. Added pieces of code from a CSS library to provide grid layout, looks better with less code now. This also fixed some layout problems for firefox.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -40,6 +40,7 @@ body {
 .collapse-content {
   padding: 15px;
   border: 1px solid #dedede;
+  background-color: white;
 }
 
 #profileDiv, #NotificationDiv{
@@ -113,3 +114,128 @@ paper-button {
   background-color: #669900;
 }
 
+
+
+
+
+
+
+
+/*
+
+  GRID CSS
+
+  http://www.responsivegridsystem.com/ - Graham Miller
+
+  Offered under
+  http://creativecommons.org/licenses/by/3.0/
+*/
+
+
+/*  SECTIONS  ============================================================================= */
+
+.section {
+  clear: both;
+  padding: 0;
+  margin: 0;
+}
+
+/*  GROUPING  ============================================================================= */
+
+
+.group:before,
+.group:after {
+  content:"";
+  display:table;
+}
+.group:after {
+  clear:both;
+}
+.group {
+  zoom:1; /* For IE 6/7 (trigger hasLayout) */
+}
+
+/*  GRID COLUMN SETUP   ==================================================================== */
+
+.col {
+  display: block;
+  float:left;
+}
+
+.col:first-child { margin-left: 0; } /* all browsers except IE6 and lower */
+
+
+/*  REMOVE MARGINS AS ALL GO FULL WIDTH AT 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+  .col {
+
+  }
+}
+
+
+
+/*  GRID OF EIGHT   ============================================================================= */
+
+
+.span_8_of_8 {
+  width: 100%;
+}
+
+.span_7_of_8 {
+  width: 87.3%;
+}
+
+.span_6_of_8 {
+  width: 74.6%;
+}
+
+.span_5_of_8 {
+  width: 61.9%;
+}
+
+.span_4_of_8 {
+  width: 49.2%;
+}
+
+.span_3_of_8 {
+  width: 36.5%;
+}
+
+.span_2_of_8 {
+  width: 23.8%;
+}
+
+.span_1_of_8 {
+  width: 11.1%;
+}
+
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+  .span_8_of_8 {
+    width: 100%;
+  }
+  .span_7_of_8 {
+    width: 100%;
+  }
+  .span_6_of_8 {
+    width: 100%;
+  }
+  .span_5_of_8 {
+    width: 100%;
+  }
+  .span_4_of_8 {
+    width: 100%;
+  }
+  .span_3_of_8 {
+    width: 100%;
+  }
+  .span_2_of_8 {
+    width: 100%;
+  }
+  .span_1_of_8 {
+    width: 100%;
+  }
+}
